# plexus

./: .env.example  LICENSE  README.md  plexus-actions.yaml  plexus-nodes.yaml  plexus-receptors.yaml  pyproject.toml
agents/: security_responder.py
harness/: fake_system.py  runner.py
plexus/: __init__.py  adapters.py  config.py  hub.py  loader.py  logging_config.py  models.py
plexus/actions/: base.py  invoke_build_fixer.py  notify_ops.py  quarantine_document.py  reboot_redis.py  registry.py  scale_embed_workers.py  security_agent.py
plexus/db/: __init__.py  database.py  models.py
plexus/receptors/: alerter.py  base.py  health.py  logger.py
plexus/sql/: create_tables.sql
ui-demo/: .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui-demo/src/: app.css  app.html
ui-demo/src/lib/: config-helpers.ts  theme.svelte.ts  types.ts  util.ts
ui-demo/src/lib/components/: ClearDataButton.svelte  HealthDot.svelte  JsonToggle.svelte  SeverityBadge.svelte  Sidebar.svelte  SignalRow.svelte  Sparkline.svelte  ThemeToggle.svelte
ui-demo/src/lib/server/: db.ts  signal-bus.ts
ui-demo/src/lib/sim/: fixtures.ts  store.svelte.ts  types.ts
ui-demo/src/lib/stores/: signals.ts  stream.server.ts  stream.ts
ui-demo/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
ui-demo/src/routes/(app)/: +layout.server.ts  +layout.svelte  +page.svelte
ui-demo/src/routes/monitor/: +page.svelte
ui-demo/src/routes/nodes/: +page.svelte
ui-demo/src/routes/receptors/: +page.svelte
ui-demo/src/routes/topology/: +page.svelte
(+28 files in other folders)
